--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -44,7 +44,8 @@
 
 <p>You can use the drivers from Java like this:</p>
 
-<pre><code>import com.rethinkdb.RethinkDB;
+<pre><code>
+    import com.rethinkdb.RethinkDB;
     import com.rethinkdb.gen.exc.ReqlError;
     import com.rethinkdb.gen.exc.ReqlQueryLogicError;
     import com.rethinkdb.model.MapObject;
